# dicom_utils

./: .gitignore  FUNCTIONS.md  README.md  compiling_mo.py  dcm_tags.py  dcm_to_sitk.py  drli_helper.py  helpers.py  lidc.py  lidc_local.py  litq.py  pyproject.toml  requirements.txt  setup.py
__pycache__/: setup.py
dicom_utils/: .gitignore  __init__.py  capestart_related.py  dcm_tags.py  dcm_to_sitk.py  drli_helper.py  errors.txt  helpers.py  litq.py  metadata.py  rtstruct.py  sitk_to_dcm.py  snippets.py  tmp.csv
dicom_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
run/: dcm_to_sitk_case.py  dcm_to_sitk_dataset.py  drli_to_sitk.py  nifti_rgb_to_dicom.py  set_patient_id_from_folder.py
